# reachy-mini-twitch-voice

./: .env.local.example  .gitignore  README.md  mise.toml  pyproject.toml
docs/: hermes-integration.md  hermes-next-steps.md  reachy-hermes-claude-code-instructions.md  reachy-mini-ssh-checklist.md  requirements-reachy.txt
samples/: replay_irc.txt
src/reachy_mini_twitch_voice.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/reachy_twitch_voice/: __init__.py  app_state_store.py  config.py  conversation_session.py  dotenv_loader.py  hermes_session.py  input_adapter.py  main.py  movement_manager.py  normalizer.py  orchestrator.py  profile_store.py  reachy_adapter.py  safety.py  speech_tapper.py  stream_journal_store.py  tool_executor.py  twitch_irc.py  twitch_parser.py  types.py  viewer_memory_store.py  web_console.py
src/reachy_twitch_voice/prompts/: hermes_stream_summary_ja.txt  hermes_twitch_system_ja.txt  system_ja.txt
tests/: test_app_state_store.py  test_audio_routing.py  test_conversation_flow.py  test_filler_speech.py  test_hermes_session.py  test_main_replay.py  test_motion_improvements.py  test_movement_manager.py  test_normalizer.py  test_orchestrator.py  test_profile_store.py  test_queue_policy.py  test_reachy_adapter.py  test_safety.py  test_speech_tapper.py  test_stream_journal_store.py  test_tts_resilience.py  test_twitch_irc.py  test_twitch_parser.py  test_viewer_memory_store.py
